--- a/.github/webflow/build-stage.yml
+++ b/.github/webflow/build-stage.yml
@@ -2,7 +2,7 @@ name: Build and deploy to GitHub Pages
 
 on:
     push:
-        branches: [main]
+        branches: main
 
 jobs:
     build-and-deploy:
@@ -10,17 +10,18 @@ jobs:
         steps:
             - name: Checkout 🛎️
               uses: actions/checkout@v2.3.1
-              with:
-                repo-token: ${{ secrets.ACCESS_TOKEN }}
-
+            # Setup key
+            - run: set -eu
+            - run: mkdir "$HOME/.ssh"
+            - run: echo "${{ secrets.ACCESS_TOKEN }}" > "$HOME/.ssh/key"
+            - run: chmod 600 "$HOME/.ssh/key"
+            # Build - используем если есть файл установзик package.json
             - name: Install, lint, build 🔧
               run: |
-                  npm install
-                  npm run lint:js
+                  npm install 
                   npm run build
+            # END Build
 
+            # Deploy
             - name: Deploy 🚀
-              uses: JamesIves/github-pages-deploy-action@4.1.0
-              with:
-                  branch: gh-pages
-                  folder: build
+            - run: cd app && rsync -e "ssh -p 20022 -i "$HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress --delete . /home/denysmyr/repositories/wedding-agency
