--- a/.github/webflow/build-stage.yml
+++ b/.github/webflow/build-stage.yml
@@ -16,10 +16,10 @@ jobs:
             - run: echo "${{ secrets.ACCESS_TOKEN }}" > "$HOME/.ssh/key"
             - run: chmod 600 "$HOME/.ssh/key"
             # Build - используем если есть файл установзик package.json
-            - name: Install, lint, build 🔧
-              run: |
-                  npm install 
-                  npm run build
+            # - name: Install, lint, build 🔧
+            #   run: |
+            #       npm install 
+            #       npm run build
             # END Build
 
             # Deploy
